--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -124,13 +124,13 @@ Funes represents the extreme example of a person without the ability to abstract
 
 ## Concepts in Machine Learning
 
-Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://openai.com/index/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic blog in which you can learn a lot about machine learning: [Link](https://colah.github.io/))
+Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://openai.com/index/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic [blog](https://colah.github.io/) in which you can learn a lot about machine learning).
 
 Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] can recognize abstract concepts across different forms, from photographs to drawings to written words, suggesting that both artificial and human brains might share a fundamental approach to understanding the world by organizing information into high-level semantic concepts.
 
 But how do they analyze CLIP's individual neurons? They use two main approaches to understand what individual neurons are actually doing, like a neuroscientist like Quiroga, using different tests to understand brain function.
 
-The first method, feature visualization, generates images by using gradient ascent optimization to find input patterns that maximally activate specific neurons. Starting with random noise, the algorithm gradually tweaks and refines the pixels until it creates an image that strongly excites the target neuron, similar to playing a game of "warmer/colder" where each adjustment is guided by how strongly the neuron responds. The resulting generated images, while often abstract, provide direct evidence of the features and patterns each neuron has learned to detect during training. I strongly recommend reading (again) Chris Olah's brilliant post on Inceptionism ([Link](https://research.google/blog/inceptionism-going-deeper-into-neural-networks/)). It provides a clear overview while showcasing the beauty of this concept and of neural networks in general.
+The first method, feature visualization, generates images by using gradient ascent optimization to find input patterns that maximally activate specific neurons. Starting with random noise, the algorithm gradually tweaks and refines the pixels until it creates an image that strongly excites the target neuron, similar to playing a game of "warmer/colder" where each adjustment is guided by how strongly the neuron responds. The resulting generated images, while often abstract, provide direct evidence of the features and patterns each neuron has learned to detect during training. I strongly recommend reading (again) Chris Olah's brilliant post on [Inceptionism](https://research.google/blog/inceptionism-going-deeper-into-neural-networks/). It provides a clear overview while showcasing the beauty of this concept and of neural networks in general.
 
 The second approach is more straightforward: researchers feed dataset examples through CLIP and keep track of which examples make each neuron fire most strongly. By examining these "greatest hits" for each neuron, patterns emerge.
 
