new image update

--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -39,7 +39,7 @@ Finally, Borges concludes the narrative with a succinct yet profound observation
 
 In short, as Borges usually does in many of his stories, he starts with a simple premise: *the life of a man who can remember everything* and he geniously arrives at a profound conclusion: *To think, we must forget*.
 
-## Funes in Real Life
+## Solomon Shereshevskii
 
 The subsequent section, now exploring neuroscience and real experiments, draws heavily from Rodrigo Quian Quiroga's book "Borges and memory" [1], which I also highly recommend.
 
@@ -64,9 +64,9 @@ As he describes himself below, he also had great trouble recognising voices and 
 > I became so interested in his voice [referring to the voice of filmmaker Sergei Eisenstein] that I couldn't follow what he was saying…. But there are people whose voices are constantly changing. I often have trouble recognising someone's voice on the phone, and it's not because of a bad connection. It's because the person is someone who changes their voice twenty or thirty times during the course of a day. People don't notice this, but I do.
 A person's expression depends on their mood and the circumstances in which they find themselves. People's faces are constantly changing; it is these different forms of expression that confuse me and make it so difficult to remember faces.
 
-Following this examination, fascinating parallels emerge between Shereshevskii and Funes. Actually, it is surprising how well Borges predicted the impact that an enormous memory capacity could have on a human being, relying purely on intuition. I find particularly interesting the example of the faces, since it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
+Following this examination, fascinating parallels emerge between Shereshevskii and Funes. Actually, it is surprising how well Borges predicted the impact that an enormous memory capacity could have on a human being, relying purely on intuition. I find particularly interesting the example of the faces, since how Shereshevskii describes it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
 
-## Henry Molaison or the Anti-Funes
+## Henry Molaison
 
 Henry Molaison (1926-2008) began experiencing epileptic seizures at age 10. His condition worsened during his teenage years, becoming resistant to even the strongest medications. By age 27, the severity of his seizures forced him to leave his job at a motor assembly plant.
 
@@ -128,17 +128,23 @@ Now, we will connect this crucial idea of abstraction to machine learning. Actua
 
 Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] can recognize abstract concepts across different forms, from photographs to drawings to written words, suggesting that both artificial and human brains might share a fundamental approach to understanding the world by organizing information into high-level semantic concepts.
 
-But how do they analyze CLIP's individual neurons? They use two main approaches to understand what individual neurons are actually doing, like a neuroscientist like Quiroga, using different tests to understand brain function.
+But how do they analyze CLIP's individual neurons? They use two main approaches to understand what individual neurons are actually doing, much like Quiroga, who employs various tests to study brain function.
 
-The first method, feature visualization, generates images by using gradient ascent optimization to find input patterns that maximally activate specific neurons. Starting with random noise, the algorithm gradually tweaks and refines the pixels until it creates an image that strongly excites the target neuron, similar to playing a game of "warmer/colder" where each adjustment is guided by how strongly the neuron responds. The resulting generated images, while often abstract, provide direct evidence of the features and patterns each neuron has learned to detect during training. I strongly recommend reading (again) Chris Olah's brilliant post on [Inceptionism](https://research.google/blog/inceptionism-going-deeper-into-neural-networks/). It provides a clear overview while showcasing the beauty of this concept and of neural networks in general.
+The first method, feature visualization, generates images by using gradient ascent optimization to find input patterns that maximally activate specific neurons. Starting with random noise, the algorithm gradually tweaks and refines the pixels until it creates an image that strongly excites the target neuron, similar to playing a game of "warmer/colder" where each adjustment is guided by how strongly the neuron responds. The resulting generated images, while often abstract, provide direct evidence of the features and patterns each neuron has learned to detect during training. I strongly recommend reading (again) Chris Olah's brilliant post on [Inceptionism](https://research.google/blog/inceptionism-going-deeper-into-neural-networks/). This method, along with the insights it provides into neural networks, is truly beautiful.
 
 The second approach is more straightforward: researchers feed dataset examples through CLIP and keep track of which examples make each neuron fire most strongly. By examining these "greatest hits" for each neuron, patterns emerge.
 
-<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
-  <img src="/assets/images/paper-example_.png" alt="Luke-graph" style="max-width: 100%; height: auto;">
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/multimodal-neuron-example.png" alt="example-multimodal-neurons" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Biological neurons, such as the famed Halle Berry neuron discovered by Quiroga, do not fire for visual clusters of ideas, but semantic clusters. At the highest layers of CLIP, similar semantic invariance is found.</p>
 </div>
 
-What's particularly interesting about CLIP is that its neurons often turn out to be "multi-faceted" - meaning a single neuron might respond strongly to both photographs and drawings of the same concept, or even to written words describing that concept. For example, a single neuron might light up for photos of dogs, cartoon dogs, and even the word "dog" - suggesting it's learned to recognize the concept of "dog" across different forms of representation.
+Similar to the neurons discovered by Quiroga, researchers found that CLIP neurons in ResNet50 are "multi-faceted" [6]. This means that a single neuron might respond strongly to both photos and drawings of the same concept, or even to written words representing that concept. For instance, one neuron might activate in response to a photo of Spider-Man, a cartoon Spider-Man, or even the words "Spider" or "Spider-Man," suggesting that it has learned to recognize the concept of "Spider-Man" across various forms of representation.
+
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/paper-example_.png" alt="paper-multimodal-neurons" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Selected neurons from the final layer of four CLIP models. Each neuron is represented by a feature visualization with a human-chosen concept labels to help quickly provide a sense of each neuron. Labels were picked after looking at hundreds of stimuli that activate the neuron, in addition to feature visualizations.</p>
+</div>
 
 This two-pronged approach has revealed that most neurons in CLIP are surprisingly interpretable, giving us valuable insights into how the model connects the worlds of images and language. It's like discovering that what initially looked like a black box is actually filled with specialized workers, each doing a specific but flexible job in bridging the gap between visual and textual understanding.
 
@@ -154,3 +160,6 @@ This two-pronged approach has revealed that most neurons in CLIP are surprisingl
 [4] Quiroga, R. Q. (2012). Concept cells: the building blocks of declarative memory functions. Nature Reviews Neuroscience, 13(8), 587–597.
 
 [5] Radford, A., Kim, J. W., Hallacy, C., Ramesh, A., Goh, G., Agarwal, S., ... & Sutskever, I. (2021, July). Learning transferable visual models from natural language supervision. In International conference on machine learning (pp. 8748-8763). PMLR.
+
+[6] Nguyen, A., Yosinski, J., & Clune, J. (2016). Multifaceted feature visualization: Uncovering the different types of features learned by each neuron in deep neural networks. arXiv preprint arXiv:1602.03616.
+
