finished multimodal section

--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -16,24 +16,23 @@ During my research internship at CSIC, I had the opportunity to work on a projec
 I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded in machine learning models and their importance for learning.
 
 
-
 ## Funes the Memorious
 
-Let's begin with a brief overview of the narrative. Nevertheless, I urge you to immerse yourself in the story directly - it spans less than 10 pages - since any summary will inevitably fall short in capturing the full depth and magnitude of Borges's work. Additionally, I'll be incorporating several direct quotes from the story, as I think there's no better way to convey the intricacies of the discussed concepts than through Borges' own words.
+Let's begin with a brief overview of the narrative. Nevertheless, I urge you to immerse yourself in the story directly (it spans less than 10 pages) since any summary will inevitably fall short in capturing the full depth and magnitude of Borges's work. Additionally, I'll be adding several direct quotes from the story, as I think there's no better way to convey the intricacies of the discussed concepts than through Borges' own words.
 
-Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability - or perhaps, a curse - that grants him the capacity to remember every single detail with impeccable clarity. The argument is simple, but the real genius of Borges is that he explores the consequences of this power with his superb imagination, crafting a response that is both realistic, profound and oppressive. As we will see, Borges, without any formal knowledge of neuroscience, intuitively predicts the potential repercussions of such an ability with striking accuracy.
+Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability, or perhaps, a curse, that grants him the capacity to remember every single detail with impeccable clarity. The argument is simple, but the real genius of Borges is that he explores the consequences of this power with his superb imagination, crafting a response that is both realistic, profound and oppressive. As we will see, Borges, without any formal knowledge of neuroscience, intuitively predicts the potential repercussions of such an ability with striking accuracy.
 
-The author describes Funes' talent in the following way:
+Borges describes Funes' talent in the following way:
 
 > We, at one glance, can perceive three glasses on a table; Funes, all the leaves and tendrils and fruit that make up a grape vine. He knew by heart the forms of the southern clouds at dawn on the 30th of April, 1882, and could compare them in his memory with the mottled streaks on a book in Spanish binding he had only seen once and with the outlines of the foam raised by an oar in the Rio Negro the night before the Quebracho uprising.
 
-Funes, in his bed, spends his time memorising whole encyclopaedias and remembering whole days, which takes a day for him. Moreover, he undertakes the creation of a novel numerical system, assigning each number a unique concept that he can effortlessly recall. Yet, beyond the external manifestations of this extraordinary power, Funes undergoes a profound internal transformation, altering the very mechanisms of his thought.
+Funes, in his bed, spends his time memorising whole encyclopaedias and remembering whole days, which takes a full day for him. Moreover, he undertakes the creation of a novel numerical system, assigning each number a unique concept that he can effortlessly recall. Yet, beyond the external consequences of this extraordinary power, Funes undergoes a profound internal transformation, altering the very mechanisms of his thought.
 
 > Not only was it difficult for him to comprehend that the generic symbol "dog" embraces so many unlike individuals of diverse size and form; it bothered him that the dog at three fourteen (seen from the side) should have the same name as the dog at three fifteen (seen from the front). His own face in the mirror, his own hands, surprised him every time he saw them.
 
-As we can see, after his injury, Funes starts to have trouble generalising concepts. This difficulty extends to his sleep patterns, as Funes grapples with insomnia. The paradox becomes apparent: to sleep, one must engage in the act of forgetting, a faculty that Funes no longer possesses.
+As we can see, after his injury, Funes starts to have trouble generalising concepts. This difficulty extends to his sleep patterns, as Funes struggles with insomnia. Here, the paradox becomes apparent: to sleep, one must engage in the act of forgetting, a faculty that Funes no longer possesses.
 
-Finally, Borges concludes the narrative with a succinct yet profound observation on the intricacies of thought - something that eludes Funes in his altered state.
+Finally, Borges concludes the narrative with a brief yet profound observation on the intricacies of thought, something that eludes Funes in his new state.
 
 > With no effort, he had learned English, French, Portuguese and Latin. I suspect, however, that he was not very capable of thought. To think is to forget differences, generalize, make abstractions. In the teeming world of Funes, there were only details, almost immediate in their presence.
 
@@ -64,7 +63,7 @@ As he describes himself below, he also had great trouble recognising voices and 
 > I became so interested in his voice [referring to the voice of filmmaker Sergei Eisenstein] that I couldn't follow what he was saying…. But there are people whose voices are constantly changing. I often have trouble recognising someone's voice on the phone, and it's not because of a bad connection. It's because the person is someone who changes their voice twenty or thirty times during the course of a day. People don't notice this, but I do.
 A person's expression depends on their mood and the circumstances in which they find themselves. People's faces are constantly changing; it is these different forms of expression that confuse me and make it so difficult to remember faces.
 
-Following this examination, fascinating parallels emerge between Shereshevskii and Funes. Actually, it is surprising how well Borges predicted the impact that an enormous memory capacity could have on a human being, relying purely on intuition. I find particularly interesting the example of the faces, since how Shereshevskii describes it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
+Following this examination, fascinating similarities emerge between Shereshevskii and Funes. Actually, it is surprising how well Borges predicted the impact that an enormous memory capacity could have on a human being, relying purely on intuition. I find particularly interesting the example of the faces, since how Shereshevskii describes it relates quite well to Funes's inability to generalise the concept of dog, as Borges describes.
 
 ## Henry Molaison
 
@@ -84,7 +83,7 @@ When Molaison saw himself in mirrors or recent photographs, he couldn't recogniz
 
 He described his life as constantly "waking up from a dream." There's a curious antithesis here with Funes the Memorious, which Borges described as a metaphor for insomnia, where all details and memories remain permanently, oppressively present.
 
-Thanks to Molaison's case and subsequent studies, we now understand the crucial role of the hippocampus in forming new memories. However, it's important to note that the hippocampus doesn't actually store memories itself. Instead, it acts as a processor, compiling experiences into memories and storaging them in other parts of the brain. This explains why Molaison could recall pre-surgery memories, they were already stored in his brain, but couldn't form new ones. Without his hippocampus, he lacked the neural mechanism necessary to process new experiences into lasting memories for later storage.
+Thanks to Molaison's case and subsequent studies, we now understand the crucial role of the hippocampus in forming new memories. However, it's important to note that the hippocampus doesn't actually store memories itself. Instead, it acts as a processor, compiling experiences into memories and storaging them in other parts of the brain. This explains why Molaison could recall pre-surgery memories, they were already stored in his brain, but couldn't form new ones. Without his hippocampus, he lacked the neural mechanism necessary to process new experiences into lasting memories for posterior storage.
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="HMBrain" style="max-width: 70%; height: auto;">
@@ -94,7 +93,7 @@ Thanks to Molaison's case and subsequent studies, we now understand the crucial 
 
 As Borger suggest, in order to think, we need to abstract concepts and relate them, we need to forget some information. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
 
-This lead us to a very intriguing and relevant discovery done by Quiroga [2]. He found that the brain contains a subset of multimodal neurons, which respond to clusters of abstract concepts centered around a common, high-level theme rather than specific visual features. This discovery originated from studies on epileptic patients, where researchers used intracranial electrodes to observe how neurons reacted to different conceptual images presented in various formats. For instance, in the image below, we see a neuron in the entorhinal cortex, the primary interface between the hippocampus and the neocortex, that fires only when the patient is presented with the **concept** of "Luke Skywalker." This response occurs regardless of whether the concept is conveyed through an image, text, or audio. Interestingly, the same neuron also fires in response to the concept of Yoda.
+This lead us to a very intriguing and relevant discovery done by Quiroga [2]. He found that the brain contains a subset of multimodal neurons, which respond to clusters of abstract concepts centered around a common, high-level theme rather than specific visual features. This discovery originated from studies on epileptic patients, where researchers used intracranial electrodes to observe how neurons reacted to different conceptual images presented in various formats. For instance, in the image below, we see a neuron in the entorhinal cortex, the primary interface between the hippocampus and the neocortex, that fires only when the patient is presented with the **concept** of "Luke Skywalker". This response occurs regardless of whether the concept is conveyed through an image, text, or audio. Interestingly, the same neuron also fires in response to the concept of Yoda.
 
 Later, in his opinion paper Quiroga called them "concept cells" or "concept neurons" [4]. 
 
@@ -122,9 +121,9 @@ But this post is about Funes, memory and machine learning, right? So how does al
 
 Funes represents the extreme example of a person without the ability to abstract. Quiroga hypothesizes that without concept neurons, we would be like Funes, unable to abstract or categorize, only capable of remembering precise, uncompressed details of everything we experience, but paradoxically unable to truly think. This highlights a fundamental insight: thinking is the process of abstracting, associating concepts, and creating relationships between them. These conceptual associations then help strengthen our memories and allow us to recall them later.
 
-## Concepts in Machine Learning
+## Multimodal Neurons in Machine Learning
 
-Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://openai.com/index/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic [blog](https://colah.github.io/) in which you can learn a lot about machine learning).
+Now, we will connect this crucial idea of abstraction to machine learning. Actually, there is already a very beatiful paper that is inspired by multimodal neuros as discovered by Quiroga. The paper is called ["Multimodal neurons in artificial neural networks"](https://distill.pub/2021/multimodal-neurons/) from OpenAI, in particular, from intepretability researches I really admire such as Chris Olah (he has a fantastic [blog](https://colah.github.io/) in which you can learn a lot about machine learning).
 
 Let's analyze it a bit. Authors discovered that individual neurons in CLIP [5] can recognize abstract concepts across different forms, from photographs to drawings to written words, suggesting that both artificial and human brains might share a fundamental approach to understanding the world by organizing information into high-level semantic concepts.
 
@@ -139,14 +138,25 @@ The second approach is more straightforward: researchers feed dataset examples t
   <p style="text-align: center; margin-top: 10px;">Biological neurons, such as the famed Halle Berry neuron discovered by Quiroga, do not fire for visual clusters of ideas, but semantic clusters. At the highest layers of CLIP, similar semantic invariance is found.</p>
 </div>
 
-Similar to the neurons discovered by Quiroga, researchers found that CLIP neurons in ResNet50 are "multi-faceted" [6]. This means that a single neuron might respond strongly to both photos and drawings of the same concept, or even to written words representing that concept. For instance, one neuron might activate in response to a photo of Spider-Man, a cartoon Spider-Man, or even the words "Spider" or "Spider-Man," suggesting that it has learned to recognize the concept of "Spider-Man" across various forms of representation.
+Similar to the neurons discovered by Quiroga, researchers found that CLIP neurons in ResNet50 are "multi-faceted" [6]. This means that a single neuron might respond strongly to both photos and drawings of the same concept, or even to written words representing that concept. For instance, one neuron might activate in response to a photo of Spider-Man, a cartoon Spider-Man, or even the words "Spider" or "Spider-Man", suggesting that it has learned to recognize the concept of "Spider-Man" across various forms of representation.
+
+But this is not everything! The OpenAI team made another fascinating discovery about how CLIP's multimodal neurons work together. They used a sparse linear probe, basically a regularized linear layer that maps neural activations to specific outputs while enforcing most of its weights to be zero [7]. Here the sparsity is crucial! By keeping only the strongest connections, it reveals which neurons are truly important for recognizing specific concepts while filtering out spurious correlations. Using this technique, researchers could analyze CLIP's decision-making process when it classifies both images and text.
+
+Then, they found that CLIP stores concepts in its neurons similarly to how Word2vec handles words (when doing text clasification): in an almost linear, straightforward way. This means these concepts follow a simple algebra that behaves similarly to a linear probe.
+
+For example, when CLIP processes the word "surprised", it doesn't just register basic shock, it specifically associates surprise with positive emotions like delight or wonder. Similarly, when processing the word "intimate", CLIP connects it with gentle smiles and romantic symbols like hearts, while explicitly excluding concepts of illness or suffering. This reveals an important limitation in CLIP's understanding: it misses crucial nuances of human experience. For instance, its simplified view of intimacy fails to capture profound moments like caring for sick loved ones. Thus, CLIP is oversimplifying complex human experiences to prioritize clear representation of concepts within its training data.
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
-  <img src="/assets/images/paper-example_.png" alt="paper-multimodal-neurons" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Selected neurons from the final layer of four CLIP models. Each neuron is represented by a feature visualization with a human-chosen concept labels to help quickly provide a sense of each neuron. Labels were picked after looking at hundreds of stimuli that activate the neuron, in addition to feature visualizations.</p>
+  <img src="/assets/images/neuron-algebra.png" alt="neuron-algebra" style="max-width: 100%; height: auto;">
 </div>
 
-This two-pronged approach has revealed that most neurons in CLIP are surprisingly interpretable, giving us valuable insights into how the model connects the worlds of images and language. It's like discovering that what initially looked like a black box is actually filled with specialized workers, each doing a specific but flexible job in bridging the gap between visual and textual understanding.
+While the neuron-level analysis revealed many concepts CLIP understands, it did not tell the complete story of the model's representation capabilities. An illustrative example is CLIP's accurate geolocation ability, demonstrated by its creators at OpenAI. The model can identify locations with surprising precision, down to specific neighborhoods within cities. In the experiments with personal photos, CLIP consistently recognized images taken in San Francisco, sometimes even identifying specific districts like Twin Peaks.
+
+However, this geographic knowledge isn't stored in the way one might expect. Despite extensive searching, the team did not found any single "San Francisco neuron", nor does the concept seem to be composed of simpler elements like "California" plus "city". This suggests that some of CLIP's more sophisticated knowledge is encoded in more complex ways, perhaps as vectors, directions in the embedding space, or other geometric structures we don't yet fully understand.
+
+This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. This result made me think about how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept, leading us to one of the most fascinating theories in Machine Learning.
+
+## The Superposition Hypothesis: How Neurons Share the Cognitive Load
 
 
 ## References
@@ -162,4 +172,6 @@ This two-pronged approach has revealed that most neurons in CLIP are surprisingl
 [5] Radford, A., Kim, J. W., Hallacy, C., Ramesh, A., Goh, G., Agarwal, S., ... & Sutskever, I. (2021, July). Learning transferable visual models from natural language supervision. In International conference on machine learning (pp. 8748-8763). PMLR.
 
 [6] Nguyen, A., Yosinski, J., & Clune, J. (2016). Multifaceted feature visualization: Uncovering the different types of features learned by each neuron in deep neural networks. arXiv preprint arXiv:1602.03616.
+
+[7] Radford, A., Jozefowicz, R., & Sutskever, I. (2017). Learning to generate reviews and discovering sentiment. arXiv preprint arXiv:1704.01444.
 
