--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -5,6 +5,7 @@ date: 2024-08-10
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/funes.png" alt="Funes" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure 1: June 7, 1942. Page three of the Arts & Letters section of La Nación, where Borges's “Funes the Memorious", was first published. </p>
 </div>
 
 
@@ -87,11 +88,12 @@ Thanks to Molaison's case and subsequent studies, we now understand the crucial 
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="HMBrain" style="max-width: 70%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: Henry Molaison brain compared to an ordinary brain.</p>
 </div>
 
 ## Hippocampus and Concept Cells
 
-As Borger suggest, in order to think, we need to abstract concepts and relate them, we need to forget some information. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
+As Borges suggest, in order to think, we need to abstract concepts and relate them, we need to forget some information. This involves focusing on the essential aspects while disregarding minor details, essentially operating at a more fundamental level of understanding.
 
 This lead us to a very intriguing and relevant discovery done by Quiroga [2]. He found that the brain contains a subset of multimodal neurons, which respond to clusters of abstract concepts centered around a common, high-level theme rather than specific visual features. This discovery originated from studies on epileptic patients, where researchers used intracranial electrodes to observe how neurons reacted to different conceptual images presented in various formats. For instance, in the image below, we see a neuron in the entorhinal cortex, the primary interface between the hippocampus and the neocortex, that fires only when the patient is presented with the **concept** of "Luke Skywalker". This response occurs regardless of whether the concept is conveyed through an image, text, or audio. Interestingly, the same neuron also fires in response to the concept of Yoda.
 
@@ -100,6 +102,7 @@ Later, in his opinion paper Quiroga called them "concept cells" or "concept neur
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/luke.jpg" alt="Luke" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
 </div>
 
 This demonstrates that the concept neurons in the hippocampus (and surrounding areas) encode representations at such a high level of abstraction that they can be triggered by different types of stimuli. Furthermore, Quiroga showed that these abstract representations can form rapidly. In one experiment, he and his team presented photos and text of themselves to patients who had only known them for two days. Remarkably, the patients already had neurons that fired in response to their photos and names.
@@ -111,6 +114,7 @@ These partially overlapping representations could form the neural basis for how 
 
 <div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 70%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
 </div>
 
 In short, the same neuron can fire for different but related concepts (like Luke Skywalker and Yoda), and there are very few of these neurons, each responding to only a few specific concepts. This is called a sparse representation, and it is also widely used in machine learning, for example in sparse autoencoders that encode information using sparse vectors [3] (vectors where most values are 0 and only a few have non-zero values).
@@ -135,7 +139,7 @@ The second approach is more straightforward: researchers feed dataset examples t
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/multimodal-neuron-example.png" alt="example-multimodal-neurons" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Biological neurons, such as the famed Halle Berry neuron discovered by Quiroga, do not fire for visual clusters of ideas, but semantic clusters. At the highest layers of CLIP, similar semantic invariance is found.</p>
+  <p style="text-align: center; margin-top: 10px;">Figure X: Biological neurons, such as the famed Halle Berry neuron discovered by Quiroga, do not fire for visual clusters of ideas, but semantic clusters. At the highest layers of CLIP, similar semantic invariance is found.</p>
 </div>
 
 Similar to the neurons discovered by Quiroga, researchers found that CLIP neurons in ResNet50 are "multi-faceted" [6]. This means that a single neuron might respond strongly to both photos and drawings of the same concept, or even to written words representing that concept. For instance, one neuron might activate in response to a photo of Spider-Man, a cartoon Spider-Man, or even the words "Spider" or "Spider-Man", suggesting that it has learned to recognize the concept of "Spider-Man" across various forms of representation.
@@ -148,13 +152,14 @@ For example, when CLIP processes the word "surprised", it doesn't just register 
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/neuron-algebra.png" alt="neuron-algebra" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
 </div>
 
 While the neuron-level analysis revealed many concepts CLIP understands, it did not tell the complete story of the model's representation capabilities. An illustrative example is CLIP's accurate geolocation ability, demonstrated by its creators at OpenAI. The model can identify locations with surprising precision, down to specific neighborhoods within cities. In the experiments with personal photos, CLIP consistently recognized images taken in San Francisco, sometimes even identifying specific districts like Twin Peaks.
 
 However, this geographic knowledge isn't stored in the way one might expect. Despite extensive searching, the team did not found any single "San Francisco neuron", nor does the concept seem to be composed of simpler elements like "California" plus "city". This suggests that some of CLIP's more sophisticated knowledge is encoded in more complex ways, perhaps as vectors, directions in the embedding space, or other geometric structures we don't yet fully understand.
 
-This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. This result made me think about how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept, leading us to one of the most fascinating theories in Machine Learning.
+This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. This result made me think about how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept, leading us to one of the most fascinating hypothesis in Machine Learning.
 
 ## The Superposition Hypothesis: How Neurons Share the Cognitive Load
 
