--- a/_posts/2024-08-10-funes-ml.md
+++ b/_posts/2024-08-10-funes-ml.md
@@ -3,7 +3,7 @@ title: "Borges, Memory and Machine Learning"
 date: 2024-08-10
 ---
 
-<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+<div style="display: flex; flex-direction: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/funes.png" alt="Funes" style="max-width: 100%; height: auto;">
   <p style="text-align: center; margin-top: 10px;">Figure 1: June 7, 1942. Page three of the Arts & Letters section of La Nación, where Borges's “Funes the Memorious", was first published. </p>
 </div>
@@ -86,7 +86,7 @@ He described his life as constantly "waking up from a dream." There's a curious 
 
 Thanks to Molaison's case and subsequent studies, we now understand the crucial role of the hippocampus in forming new memories. However, it's important to note that the hippocampus doesn't actually store memories itself. Instead, it acts as a processor, compiling experiences into memories and storaging them in other parts of the brain. This explains why Molaison could recall pre-surgery memories, they were already stored in his brain, but couldn't form new ones. Without his hippocampus, he lacked the neural mechanism necessary to process new experiences into lasting memories for posterior storage.
 
-<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+<div style="display: flex; flex-direction: center; align-items: center; margin: 20px 0;">
   <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="HMBrain" style="max-width: 70%; height: auto;">
   <p style="text-align: center; margin-top: 10px;">Figure X: Henry Molaison brain compared to an ordinary brain.</p>
 </div>
@@ -100,7 +100,7 @@ This lead us to a very intriguing and relevant discovery done by Quiroga [2]. He
 Later, in his opinion paper Quiroga called them "concept cells" or "concept neurons" [4]. 
 
 
-<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+<div style="display: flex; flex-direction: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/luke.jpg" alt="Luke" style="max-width: 100%; height: auto;">
   <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
 </div>
@@ -112,7 +112,7 @@ Nevertheless, using a single neuron to encode each concept would be inefficient 
 Imagine a cell assembly, a group of neurons, that encodes the concept of 'Luke Skywalker'. Some neurons in this assembly also respond to Yoda, while others also fire in response to Darth Vader. When the 'Luke Skywalker cell assembly' is activated (for example, when seeing his picture), it can trigger associated concepts like Yoda or Darth Vader through these overlapping neural patterns. This happens because neurons that participate in multiple concept representations act as bridges, allowing pattern completion to activate related concepts.
 These partially overlapping representations could form the neural basis for how we encode and learn associations and episodic memories.
 
-<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+<div style="display: flex; flex-direction: center; align-items: center; margin: 20px 0;">
   <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 70%; height: auto;">
   <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
 </div>
