--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -1,6 +1,6 @@
 ---
 title: "Borges, Memory and Machine Learning"
-date: 2024-08-10
+date: 2024-03-10
 ---
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
@@ -12,9 +12,9 @@ date: 2024-08-10
 
 
 
-During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting Borges and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
+During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting my (current) favourit writer, Borges, and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
 
-I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded in machine learning models and their importance for learning.
+I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded and stored in deep learning models and their importance for learning.
 
 
 ## Funes the Memorious
@@ -162,6 +162,7 @@ However, this geographic knowledge isn't stored in the way one might expect. Des
 This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. This result made me think about how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept, leading us to one of the most fascinating hypothesis in Machine Learning.
 
 ## The Superposition Hypothesis: How Neurons Share the Cognitive Load
+
 
 
 ## References
